@@ -40,7 +40,7 @@ public class ExternalVariableCleanupRolloverIT extends AbstractCleanupIT {
     getExternalVariableCleanupConfiguration().setEnabled(true);
     final List<ExternalProcessVariableRequestDto> varsToCleanIndex1 = IntStream.range(0, 10)
       .mapToObj(i -> ingestionClient.createPrimitiveExternalVariable().setId("id" + i))
-      .collect(toList());
+      .toList();
 
     // freeze time to manipulate ingestion timestamp
     final OffsetDateTime now = dateFreezer().freezeDateAndReturn();
@@ -54,10 +54,10 @@ public class ExternalVariableCleanupRolloverIT extends AbstractCleanupIT {
 
     final List<ExternalProcessVariableRequestDto> varsToCleanIndex2 = IntStream.range(20, 30)
       .mapToObj(i -> ingestionClient.createPrimitiveExternalVariable().setId("id" + i))
-      .collect(toList());
+      .toList();
     final List<ExternalProcessVariableRequestDto> varsToKeepIndex2 = IntStream.range(40, 50)
       .mapToObj(i -> ingestionClient.createPrimitiveExternalVariable().setId("id" + i))
-      .collect(toList());
+      .toList();
 
     // freeze time to manipulate ingestion timestamp
     ingestionClient.ingestVariables(varsToCleanIndex2);
