@@ -23,7 +23,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
@@ -320,7 +320,7 @@ public class MultiMeasureProcessReportIT extends AbstractProcessDefinitionIT {
     final List<UserTaskDurationTime> expectedUserTaskDurationTimes = expectedMeasureViewProperties.stream()
       // if there is the duration view present we should see the userTask total time as this is a user task report
       .map(viewProperty -> ViewProperty.DURATION.equals(viewProperty) ? UserTaskDurationTime.TOTAL : null)
-      .collect(toList());
+      .toList();
 
     // then
     final ReportResultResponseDto<List<HyperMapResultEntryDto>> resultDto = evaluationResponse.getResult();
