@@ -5,9 +5,10 @@
  */
 package org.camunda.optimize.service;
 
-import io.micrometer.core.instrument.util.StringUtils;
+import jakarta.ws.rs.NotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.camunda.optimize.dto.optimize.BackupState;
 import org.camunda.optimize.dto.optimize.rest.BackupInfoDto;
 import org.camunda.optimize.dto.optimize.rest.SnapshotInfoDto;
@@ -20,7 +21,6 @@ import org.elasticsearch.snapshots.SnapshotShardFailure;
 import org.elasticsearch.snapshots.SnapshotState;
 import org.springframework.stereotype.Component;
 
-import javax.ws.rs.NotFoundException;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneId;
@@ -30,7 +30,6 @@ import java.util.Map;
 
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
 @RequiredArgsConstructor
 @Component
@@ -41,7 +40,7 @@ public class BackupService {
   private final ConfigurationService configurationService;
   private static final int EXPECTED_NUMBER_OF_SNAPSHOTS_PER_BACKUP = 2;
 
-  public synchronized void triggerBackup(final Integer backupId) {
+  public synchronized void triggerBackup(final Long backupId) {
     validateRepositoryExists();
     backupReader.validateNoDuplicateBackupId(backupId);
 
@@ -53,17 +52,17 @@ public class BackupService {
     validateRepositoryExists();
     return backupReader.getAllOptimizeSnapshotsByBackupId().entrySet().stream()
       .map(entry -> getSingleBackupInfo(entry.getKey(), entry.getValue().stream().collect(groupingBy(SnapshotInfo::state))))
-      .collect(toList());
+      .toList();
   }
 
-  public BackupInfoDto getSingleBackupInfo(final Integer backupId) {
+  public BackupInfoDto getSingleBackupInfo(final Long backupId) {
     validateRepositoryExists();
     return getSingleBackupInfo(backupId, backupReader.getOptimizeSnapshotsForBackupId(backupId)
       .stream()
       .collect(groupingBy(SnapshotInfo::state)));
   }
 
-  private BackupInfoDto getSingleBackupInfo(final Integer backupId,
+  private BackupInfoDto getSingleBackupInfo(final Long backupId,
                                             final Map<SnapshotState, List<SnapshotInfo>> snapshotInfosPerState) {
     if (snapshotInfosPerState.isEmpty()) {
       final String reason = String.format("No Optimize backup with ID [%d] could be found.", backupId);
@@ -73,7 +72,7 @@ public class BackupService {
     return getBackupInfoDto(backupId, snapshotInfosPerState);
   }
 
-  private BackupInfoDto getBackupInfoDto(final Integer backupId,
+  private BackupInfoDto getBackupInfoDto(final Long backupId,
                                          final Map<SnapshotState, List<SnapshotInfo>> snapshotInfosPerState) {
     final BackupState backupState = determineBackupState(snapshotInfosPerState);
     String failureReason = null;
@@ -96,13 +95,13 @@ public class BackupService {
           snapshotInfo.snapshot().getSnapshotId().getName(),
           snapshotInfo.state(),
           OffsetDateTime.ofInstant(Instant.ofEpochMilli(snapshotInfo.startTime()), ZoneId.systemDefault()),
-          snapshotInfo.shardFailures().stream().map(SnapshotShardFailure::toString).collect(toList())
+          snapshotInfo.shardFailures().stream().map(SnapshotShardFailure::toString).toList()
         ))
-        .collect(toList())
+        .toList()
     );
   }
 
-  public void deleteBackup(final Integer backupId) {
+  public void deleteBackup(final Long backupId) {
     validateRepositoryExists();
     backupWriter.deleteOptimizeSnapshots(backupId);
   }
