@@ -10,7 +10,7 @@ import org.camunda.optimize.dto.optimize.query.report.single.configuration.Table
 import org.camunda.optimize.dto.optimize.query.report.single.decision.SingleDecisionReportDefinitionRequestDto;
 import org.camunda.optimize.dto.optimize.query.report.single.decision.result.raw.RawDataDecisionInstanceDto;
 import org.camunda.optimize.dto.optimize.query.report.single.process.SingleProcessReportDefinitionRequestDto;
-import org.camunda.optimize.dto.optimize.query.report.single.process.result.raw.RawDataCountDtoDto;
+import org.camunda.optimize.dto.optimize.query.report.single.process.result.raw.RawDataCountDto;
 import org.camunda.optimize.dto.optimize.query.report.single.process.result.raw.RawDataProcessInstanceDto;
 import org.camunda.optimize.service.es.report.result.RawDataCommandResult;
 import org.junit.jupiter.api.Test;
@@ -45,7 +45,7 @@ public class CSVUtilsTest {
     List<String> expectedVariableColumns = toMap.get(0).getVariables().keySet()
       .stream()
       .map(varName -> VARIABLE_PREFIX + varName)
-      .collect(toList());
+      .toList();
     List<String> expectedDtoFieldColumns = extractAllProcessInstanceDtoFieldKeys();
 
     // when
@@ -116,7 +116,7 @@ public class CSVUtilsTest {
     // then
     assertThat(result).hasSize(4);
     assertThat(result.get(0))
-      .hasSize(extractAllProcessInstanceDtoFieldKeys().size() - excludedColumns.size() + RawDataCountDtoDto.Fields.values().length)
+      .hasSize(extractAllProcessInstanceDtoFieldKeys().size() - excludedColumns.size() + RawDataCountDto.Fields.values().length)
       .doesNotContainAnyElementsOf(excludedColumns);
   }
 
@@ -146,7 +146,7 @@ public class CSVUtilsTest {
     // then
     assertThat(result).hasSize(4);
     assertThat(result.get(0))
-      .hasSize(includedColumns.size() - excludedColumns.size() + RawDataCountDtoDto.Fields.values().length)
+      .hasSize(includedColumns.size() - excludedColumns.size() + RawDataCountDto.Fields.values().length)
       .doesNotContainAnyElementsOf(excludedColumns);
   }
 
@@ -192,7 +192,7 @@ public class CSVUtilsTest {
     // then
     assertThat(result).hasSize(4);
     assertThat(result.get(0))
-      .hasSize(includedColumns.size() + RawDataCountDtoDto.Fields.values().length);
+      .hasSize(includedColumns.size() + RawDataCountDto.Fields.values().length);
   }
 
   @Test
@@ -233,11 +233,11 @@ public class CSVUtilsTest {
     List<String> expectedInputVariableColumns = toMap.get(0).getInputVariables().keySet()
       .stream()
       .map(varName -> INPUT_PREFIX + varName)
-      .collect(toList());
+      .toList();
     List<String> expectedOutputVariableColumns = toMap.get(0).getOutputVariables().keySet()
       .stream()
       .map(varName -> OUTPUT_PREFIX + varName)
-      .collect(toList());
+      .toList();
     List<String> expectedDtoFieldColumns = extractAllDecisionInstanceDtoFieldKeys();
 
     // when
